@@ -162,7 +162,14 @@ class AstroidManager:
         ):
             return self.astroid_cache[modname]
         if source:
-            return AstroidBuilder(self).file_build(filepath, modname)
+            try:
+                return AstroidBuilder(self).file_build(filepath, modname)
+            except RecursionError as e:
+                e.add_note(
+                    f"Astroid was unable to parse {filepath}.\n"
+                    "From pylint, try: --init-hook='import sys; sys.setrecursionlimit(2000)' or higher.",
+                )
+                raise e
         if fallback and modname:
             return self.ast_from_module_name(modname)
         raise AstroidBuildingError("Unable to build an AST for {path}.", path=filepath)
